fixed issue #30 - the 'created at' text was not rendering correctly on firefox 3

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -192,6 +192,8 @@ body {
 		
 		.job .created_at {
 		  float: right;
+			color: #666;
+			font-size: .9em;
 		}
 
 h2#job_title {
